# library_api

./: .gitignore  README.md  database.db  lifespan.py  main.py  pyproject.toml
app/models/: __init__.py  author.py  base.py  inventory.py  library.py  library_users.py  material.py  permission.py  role.py  role_permissions.py  section.py  user.py  user_roles.py
app/routers/: auth_router.py  author_router.py  inventory_router.py  library_router.py  material_router.py  router.py  section_router.py  user_router.py
app/schemas/: author.py  inventory.py  library.py  library_user.py  material.py  role.py  section.py  token.py  user.py  user_role.py
app/services/: auth_service.py  author_service.py  inventory_service.py  library_service.py  material_service.py  role_service.py  section_service.py  user_service.py
config/: settings.py
db/: database.py
shared/utils/: decorators.py  deps.py  enums.py  errors.py  handlers.py  middleware.py  validations.py
